--- a/example/fuckit.scss
+++ b/example/fuckit.scss
@@ -99,7 +99,7 @@ a{
     -o-background-size: cover;
     -webkit-background-size: cover;
 
-    background: rgba($hilight, 0.5) url(./img.jpg);
+    background: rgba($hilight, 0.5) url(./example/img.jpg);
     background-position: center;
 
     height:  100%;
