--- a/example/fuckit.scss
+++ b/example/fuckit.scss
@@ -123,6 +123,9 @@ a{
 
 	margin-top:-200px;
 
+	border-radius:2px;
+
+
 }
 
 .xycenteredinner{
@@ -188,6 +191,18 @@ a{
 	img {
 		width: 3 * $grid;
 	    margin: $grid/4;
+	    
+	    position:relative;
+	    top:0;
+
+	    border-radius:2px;
+	    opacity:0.8;
+
+	    &:hover{
+	    	top:-10px;
+	    	opacity:1;
+	    	tranform:translate2D(0,-10px);
+	    }
 	}
 }
 
